Added execution of profiles and started working on threading

--- a/example_config.json
+++ b/example_config.json
@@ -1,7 +1,7 @@
 {
     "profiles": [
         {
-            "profile_name": "Miner profile #1",
+            "profile_name": "miner_profile",
             "path": "C:\\Some\\Path",
             "file": "miner.exe",
             "algorithm": "autolykos2",
