Preview candidate into main (#1)
* Initial commit to preview branch

* Added config structs and reading these from config.json - an example_config.json has been added.

* Added execution of profiles and started working on threading

* working candidate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "rusty_mining"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.105"
